O.K. not needed apparently

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - type: shell
         command:
           apk update &&
-          apk add wget git ssh
+          apk add wget git
       - checkout
       - run:
           name: Install prerequisite packages
