--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
 
   cache_perl:
     docker:
-      - image: alpine:3.8
+      - image: alpine:latest
     steps:
       - run:
           name: Install git and wget
@@ -51,7 +51,7 @@ jobs:
             perl-dbd-mysql perl-dbi perl-date-format perl-html-parser perl-json perl-libwww
             perl-lwp-protocol-https perl-net-ip perl-term-readkey perl-xml-simple perl-app-cpanminus
             perl-mojolicious perl-algorithm-diff perl-module-build perl-namespace-autoclean perl-moo
-            perl-strictures perl-test-fatal perl-digest-hmac perl-type-tinyperl-type-tiny perl-digest-hmac
+            perl-strictures perl-test-fatal perl-digest-hmac perl-type-tiny perl-digest-hmac
             perl-module-runtime perl-try-tiny perl-moo perl-strictures perl-test-fatal perl-namespace-autoclean
       - restore_cache:
           key: cpanm-{{ .Environment.CIRCLE_SHA1 }}
