Fighting with YML syntax again :(

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - run:
         name: Instlal prerequisites
-        command: |
+        command:
           apk --no-progress update ;
           apk --no-progress add git wget linux-headers perl-dev perl-app-cpanminus gcc libc-dev make \
           perl-algorithm-diff perl-carp perl-dbd-mysql perl-dbi perl-data-dumper perl-date-format perl-exporter \
@@ -22,7 +22,6 @@ jobs:
       - checkout
       - restore_cache:
           key: cpanm-{{ checksum "Makefile.PL" }}-v3
-#      - run: cpanm --notest REHSACK/List-MoreUtils-XS-0.425_001.tar.gz
       - run: cpanm --installdeps --notest .
       - run: cpanm
       - save_cache:
