--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,52 +3,75 @@ jobs:
 
   cache_perl:
     docker:
-      - image: perl:latest
+      - image: alpine:latest
         environment:
         - PERL5LIB: "."
     steps:
+      - run:
+          name: Install prerequisites
+          command: |
+            apk --no-progress update ;
+            apk --no-progress add git wget linux-headers perl-dev perl-app-cpanminus gcc libc-dev make \
+            perl-algorithm-diff perl-carp perl-dbd-mysql perl-dbi perl-data-dumper perl-date-format perl-exporter \
+            perl-html-parser perl-json perl-libwww perl-lwp-protocol-https perl-mojolicious perl-net-ip \
+            perl-term-readkey perl-xml-simple perl-module-build perl-module-pluggable perl-test-weaken \
+            perl-config-tiny perl-exception-class perl-test-deep perl-readonly perl-file-which \
+            perl-list-moreutils perl-params-util perl-class-inspector perl-file-remove perl-clone perl-class-tiny \
+            perl-path-tiny perl-type-tiny perl-module-runtime perl-namespace-autoclean perl-moo perl-strictures \
+            perl-digest-hmac perl-task-weaken
       - checkout
       - restore_cache:
-          key: cpanm-{{ checksum "Makefile.PL" }}-v2
-      - run: cpanm --notest REHSACK/List-MoreUtils-XS-0.425_001.tar.gz
+          key: cpanm-{{ checksum "Makefile.PL" }}-v3
+      - run: cpanm --notest TAP::Harness::JUnit
       - run: cpanm --installdeps --notest .
       - save_cache:
           key: cpanm-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - "/usr/local/lib/perl5/site_perl"
+            - "/usr/local/share/perl5/site_perl"
       - save_cache:
-          key: cpanm-{{ checksum "Makefile.PL" }}-v2
+          key: cpanm-{{ checksum "Makefile.PL" }}-v3
           paths:
             - "/usr/local/lib/perl5/site_perl"
+            - "/usr/local/share/perl5/site_perl"
 
   unit_tests:
     docker:
-      - image: perl:latest
+      - image: alpine:latest
         environment:
         - PERL5LIB: "."
         - MYSQL_HOME: "/root/project/.circleci"
 
-      - image: circleci/mysql:5.7
+      - image: circleci/mysql:5
 
-    parallelism: 3
+    parallelism: 4
 
     steps:
-      - checkout
       - run:
-          name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client ssh git
+          name: Install prerequisites
+          command: |
+            apk --no-progress update ;
+            apk --no-progress add git wget linux-headers perl-dev perl-app-cpanminus gcc libc-dev make \
+            perl-algorithm-diff perl-carp perl-dbd-mysql perl-dbi perl-data-dumper perl-date-format perl-exporter \
+            perl-html-parser perl-json perl-libwww perl-lwp-protocol-https perl-mojolicious perl-net-ip \
+            perl-term-readkey perl-xml-simple perl-module-build perl-module-pluggable perl-test-weaken \
+            perl-config-tiny perl-exception-class perl-test-deep perl-readonly perl-file-which \
+            perl-list-moreutils perl-params-util perl-class-inspector perl-file-remove perl-clone perl-class-tiny \
+            perl-path-tiny perl-type-tiny perl-module-runtime perl-namespace-autoclean perl-moo perl-strictures \
+            perl-digest-hmac perl-task-weaken perl-test-harness perl-test-harness-utils bash mysql-client zip file \
+            bind-tools
+      - checkout
       - restore_cache:
           key: cpanm-{{ .Environment.CIRCLE_SHA1 }}
-      - run: cpanm --notest REHSACK/List-MoreUtils-XS-0.425_001.tar.gz
       - run: cpanm --notest TAP::Harness::JUnit
       - run: cpanm --installdeps --notest .
       - run:
           name: Wait for database
           command: |
-            while ! echo -n > /dev/tcp/127.0.0.1/3306; do
+            bash -c "while ! echo -n > /dev/tcp/127.0.0.1/3306; do
               sleep 1
               echo -n .
-            done
+            done"
       - run:
           name: Create database(s)
           command: |
@@ -73,17 +96,28 @@ jobs:
           path: /root/project/testout/
       - store_test_results:
           path: /root/project/testout/
+
+
   build:
     docker:
-      - image: perl:latest
+      - image: alpine:latest
         environment:
         - PERL5LIB: "."
-
     steps:
-      - checkout
       - run:
-          name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client default-jre
+          name: Install prerequisites
+          command: |
+            apk --no-progress update ;
+            apk --no-progress add git wget linux-headers perl-dev perl-app-cpanminus gcc libc-dev make \
+            perl-algorithm-diff perl-carp perl-dbd-mysql perl-dbi perl-data-dumper perl-date-format perl-exporter \
+            perl-html-parser perl-json perl-libwww perl-lwp-protocol-https perl-mojolicious perl-net-ip \
+            perl-term-readkey perl-xml-simple perl-module-build perl-module-pluggable perl-test-weaken \
+            perl-config-tiny perl-exception-class perl-test-deep perl-readonly perl-file-which \
+            perl-list-moreutils perl-params-util perl-class-inspector perl-file-remove perl-clone perl-class-tiny \
+            perl-path-tiny perl-type-tiny perl-module-runtime perl-namespace-autoclean perl-moo perl-strictures \
+            perl-digest-hmac perl-task-weaken \
+            openjdk7-jre bash
+      - checkout
       - restore_cache:
           key: cpanm-{{ .Environment.CIRCLE_SHA1 }}
       - run:
