We need to handle https

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -522,7 +522,9 @@ jobs:
           command: echo $CIRCLE_SHA1 > .git-describe
       - run:
           name: Install prerequisite packages
-          command: yum install -y java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign rpm-build make "perl(Test::Simple)" "perl(CPAN)" expect
+          command: |
+            yum install -y java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign rpm-build make
+            "perl(Test::Simple)" "perl(CPAN)" expect "perl(LWP::Protocol::https)"
       - run:
           name: Build
           command: rpm/makerpm.sh
