--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -523,7 +523,7 @@ jobs:
       - run:
           name: Install prerequisite packages
           command: |
-            yum install -y java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign rpm-build make
+            yum install -y java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign rpm-build make \
             "perl(Test::Simple)" "perl(CPAN)" expect "perl(LWP::Protocol::https)"
       - run:
           name: Build
