Trial and error...

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,9 @@ jobs:
       - checkout
       - run: jekyll build
       - run: jekyll hyde
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - test
